--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="col-sm-3 inbox">
-           <h5>Inbox</h5>
+           <h5>Tenants</h5>
 
                
            <div class="row message top-buffer">
