--- a/angular/src/app/property/partials/overview.tpl.html
+++ b/angular/src/app/property/partials/overview.tpl.html
@@ -2,8 +2,7 @@
   <div class="col-sm-7">
     <div class="property-detail-overview-item">
         <strong>Security Deposit:</strong>
-        <span ng-hide="property.securitySameAsRent">{{property.securityDeposit | rentCurrency}}</span>
-        <span ng-show="property.securitySameAsRent">Same As Rent</span>
+        <span>{{property.securityDeposit | rentCurrency}}</span>
     </div>
     <div class="property-detail-overview-item">
         <strong>Pet Deposit:</strong>
@@ -15,6 +14,10 @@
         <span ng-show="property.pets.allowDogs">Dogs</span>
         <span ng-show="property.pets.allowCats">Cats</span>
         <span ng-show="property.pets.allowOther">{{property.pets.other}}</span>
+    </div>
+    <div class="property-detail-overview-item">
+        <strong>Availability:</strong>
+        <span>{{property.availableDate | nvl}}</span>
     </div>
   </div>
   <div class="col-sm-5">
