--- a/angular/src/app/tenant/partials/profile-page-2.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-2.tpl.html
@@ -1,4 +1,4 @@
-<fieldset class="required">
+<fieldset>
    <legend>References</legend>
 
    <div class="row">
@@ -13,7 +13,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Name</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.currentOwner.name" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.currentOwner.name">
                </div>
            </div>
        </div>
@@ -21,7 +21,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Phone</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone" ui-mask="999.999.9999" required>
+                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone" ui-mask="999.999.9999">
                </div>
            </div>
        </div>
@@ -29,7 +29,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">E-mail</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="email" ng-model="profile.currentOwner.email" required>
+                  <input class="form-control input-lg" type="email" ng-model="profile.currentOwner.email">
                </div>
            </div>
        </div>
@@ -47,7 +47,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Name</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.pastOwner.name" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.pastOwner.name">
                </div>
            </div>
        </div>
@@ -55,7 +55,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Phone</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.pastOwner.phone" ui-mask="999.999.9999" required>
+                  <input class="form-control input-lg" type="tel" ng-model="profile.pastOwner.phone" ui-mask="999.999.9999">
                </div>
            </div>
        </div>
@@ -63,7 +63,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">E-mail</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="email" ng-model="profile.pastOwner.email" required>
+                  <input class="form-control input-lg" type="email" ng-model="profile.pastOwner.email">
                </div>
            </div>
        </div>
@@ -81,7 +81,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Name</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.personal.name" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.personal.name">
                </div>
            </div>
        </div>
@@ -89,7 +89,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Phone</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.personal.phone" ui-mask="999.999.9999" required>
+                  <input class="form-control input-lg" type="tel" ng-model="profile.personal.phone" ui-mask="999.999.9999">
                </div>
            </div>
        </div>
@@ -97,7 +97,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">E-mail</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="email" ng-model="profile.personal.email" required>
+                  <input class="form-control input-lg" type="email" ng-model="profile.personal.email" >
                </div>
            </div>
        </div>
@@ -105,19 +105,19 @@
    
 </fieldset>
 
-<fieldset class="fieldset-required">
+<fieldset>
    <legend>Emergency Contact</legend>
 
-   <div class="row">
+   <!--div class="row">
        <div class="col-sm-6">
            <div class="form-group">
                <label class="col-sm-4 control-label">Contact Info</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="tel" ng-model="profile.emergencyPhone" ui-mask="999.999.9999" required>
+                  <input class="form-control input-lg" type="tel" ng-model="profile.emergencyPhone" ui-mask="999.999.9999">
                </div>
            </div>
        </div>
-   </div>
+   </div-->
 
 </fieldset>
 
@@ -129,7 +129,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Year</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="number" ng-model="profile.vehicle.year" required>
+                  <input class="form-control input-lg" type="number" ng-model="profile.vehicle.year">
                </div>
            </div>
        </div>
@@ -137,7 +137,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Make</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.make" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.make">
                </div>
            </div>
        </div>
@@ -145,7 +145,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Model</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.model" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.model">
                </div>
            </div>
        </div>
@@ -153,7 +153,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Vehicle</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.vehicle" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.vehicle">
                </div>
            </div>
        </div>
@@ -161,15 +161,15 @@
 
 </fieldset>
 
-<fieldset class="fieldset-required">
+<fieldset>
    <legend>Occupation</legend>
 
    <div class="row">
        <div class="col-sm-6">
            <div class="form-group">
-               <label class="col-sm-4 control-label">Job Title</label>
+               <label class="col-sm-4 control-label">Occupation</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.jobTitle" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.jobTitle" >
                </div>
            </div>
        </div>
