Profile and dashboard changes.

--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -78,13 +78,13 @@
                          <img pl-holder="holder.js/60x60" class="img-circle">
                       </div>
                       <div class="col-sm-8 nopad-left">
-                        <p style="color: #6c757e">Don Lee</p>
+                        <p style="color: #6c757e">Don Johnson</p>
                         <p style="color: #9d9d9d">San Francisco</p>
                       </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <p>Looking to rent your SF property...<a style="color: inherit; font-weight: bold;" href="#">Read More</a></p>
+                            <p>Can you please send an electrician...<a style="color: inherit; font-weight: bold;" href="#">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -97,13 +97,13 @@
                          <img pl-holder="holder.js/60x60" class="img-circle">
                       </div>
                       <div class="col-sm-8 nopad-left">
-                        <p style="color: #6c757e">Don Lee</p>
-                        <p style="color: #9d9d9d">San Francisco</p>
+                        <p style="color: #6c757e">Jackie Chan</p>
+                        <p style="color: #9d9d9d">San Jose</p>
                       </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <p>Looking to rent your SF property...<a style="color: inherit; font-weight: bold;" href="#">Read More</a></p>
+                            <p>Our toilet is leaking, can we...<a style="color: inherit; font-weight: bold;" href="#">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -116,13 +116,13 @@
                          <img pl-holder="holder.js/60x60" class="img-circle">
                       </div>
                       <div class="col-sm-8 nopad-left">
-                        <p style="color: #6c757e">Don Lee</p>
-                        <p style="color: #9d9d9d">San Francisco</p>
+                        <p style="color: #6c757e">Taylor Swift</p>
+                        <p style="color: #9d9d9d">Berkeley</p>
                       </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <p>Looking to rent your SF property...<a style="color: inherit; font-weight: bold;" href="#">Read More</a></p>
+                            <p>Can we repaint our living room...<a style="color: inherit; font-weight: bold;" href="#">Read More</a></p>
                         </div>
                     </div>
                 </div>
