--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -158,7 +158,7 @@
                <div class="form-group">
                    <label class="col-sm-7 control-label">Area <sub>(sq.ft.)</sub></label>
                    <div class="col-sm-5">
-                      <input class="form-control input-lg" type="number" ng-model="property.area" max="99999">
+                      <input class="form-control input-lg" type="text" ng-model="property.area" ui-number-mask="0">
                    </div>
                </div>
            </div>
