--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -68,7 +68,7 @@
            <div class="form-group">
                <label class="col-sm-4 control-label">Apt. number</label>
                <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.address.aptNumber" required>
+                  <input class="form-control input-lg" type="text" ng-model="profile.address.aptNumber">
                </div>
            </div>
        </div>
