--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -31,7 +31,7 @@
             <div class="col-sm-12">
                 <h4>View Current Offers &amp; Status</h4>
                 <div class="row">
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-7 col-xs-12 img-responsive">
+                    <img src="assets/img/features/tenants/tenant-dashboard.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Snapshot of your profile, credit score, rental offers, and message center</li>
                        <li>Current availability of the property to rent</li>
