--- a/angular/src/app/tenant/dashboard.tpl.html
+++ b/angular/src/app/tenant/dashboard.tpl.html
@@ -61,7 +61,7 @@
     <div class="row" style="margin-top: 40px">
         <div class="col-sm-9">
            <h5 ng-show="watchlist.length">Watching</h5>
-           <div class="row watching" ng-repeat="property in watchlist | loadProperty" ng-show="property.address">
+           <div class="row watching" ng-repeat="property in watchlist | loadProperty:'':'lazy'" ng-show="property.address">
                <div class="col-sm-2">
                   <span class="badge" style="background-color: #89d4cd;">1 <sub>offer(s)</sub></span> 
                   <!--span class="badge" style="background-color: #ff503f;">33<sub>%</sub></span --> 
