Updated navbar and disabled email entry field

--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -7,7 +7,7 @@
             <a ng-class="isActive('/owners')" href="#/owners">Owners & Managers</a>
         </li>
         <li>
-            <a ng-class="isActive('/properties')" href="#/properties">Properties</a>
+            <a ng-class="isActive('/properties')" href="#/properties">Take A Tour</a>
         </li>
     </ul>
     <ul class="nav navbar-nav navbar-right secondary">
