--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -1,15 +1,15 @@
 <div class="content-header header-shadow property-list-header">
     <div class="container">
-        <h1>Recent Properties</h1>
+        <h1>Take A Tour</h1>
 
         <div class="row">
             <div class="col-sm-12">
-                <h3 ng-show-auth="'logout'">Take a tour</h3> 
+                <h3>Recent Properties</h3> 
 
-                <ul ng-show-auth="'logout'">
-                   <li>View recent properties</li>
-                   <li>See how to make an offer</li>
-                   <li>View recent offers</li>
+                <ul>
+                    <li>Property availability (Available, Rental Pending, Rented)</li>
+                    <li>Offers made by tenants</li>
+                    <li>How to make your offer</li>
                 </ul>
 
             </div>
