--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -33,7 +33,7 @@
                    <div class="form-group">
                        <label class="col-sm-4 control-label">E-Mail</label>
                        <div class="col-sm-8">
-                          <input class="form-control input-lg" type="email" ng-model="profile.email" placeholder="" required>
+                          <input class="form-control input-lg" type="email" placeholder="{{profile.email}}" disabled>
                        </div>
                    </div>
                </div>
