--- a/angular/src/app/tenant/partials/profile-page-2.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-2.tpl.html
@@ -105,10 +105,10 @@
    
 </fieldset>
 
-<fieldset>
+<!--fieldset>
    <legend>Emergency Contact</legend>
 
-   <!--div class="row">
+   <div class="row">
        <div class="col-sm-6">
            <div class="form-group">
                <label class="col-sm-4 control-label">Contact Info</label>
@@ -117,9 +117,9 @@
                </div>
            </div>
        </div>
-   </div-->
+   </div>
 
-</fieldset>
+</fieldset-->
 
 <fieldset>
    <legend>Vehicle Details</legend>
@@ -155,6 +155,41 @@
                <div class="col-sm-8">
                   <input class="form-control input-lg" type="text" ng-model="profile.vehicle.license">
                </div>
+           </div>
+       </div>
+   </div>
+    
+    <div class="row">
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Year</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.year" ui-number-mask="0">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Make</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.make">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Model</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.model">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">License</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.license">
+               </div> 
            </div>
        </div>
    </div>
