figuring out security

--- a/angular/src/app/property/partials/overview.tpl.html
+++ b/angular/src/app/property/partials/overview.tpl.html
@@ -23,15 +23,15 @@
   <div class="col-sm-5">
     <div class="property-detail-overview-item">
         <strong>Bedrooms:</strong>
-        <span>{{property.bedrooms}}</span>
+        <span>{{property.bedrooms | nvl}}</span>
     </div>
     <div class="property-detail-overview-item">
         <strong>Baths:</strong>
-        <span>{{property.bathrooms}}</span>
+        <span>{{property.bathrooms | nvl}}</span>
     </div>
     <div class="property-detail-overview-item">
         <strong>Parking:</strong>
-        <span>{{property.parking}}</span>
+        <span>{{property.parking | nvl}}</span>
     </div>
     <div class="property-detail-overview-item">
         <strong>Area:</strong>
