--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -55,7 +55,7 @@
                        <li>Tenants provide their preferred move-in date upfront</li>
                        <li>Add &amp; manage multiple properties in a few minutes</li>
                     </ul>
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-7 col-xs-12 img-responsive">
+                    <img src="assets/img/features/owners/offers.png" class="col-sm-7 col-xs-12 img-responsive">
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="col-sm-12">
                 <h4>Reduce Vacancy Time</h4>
                 <div class="row">
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-7 col-xs-12 img-responsive">
+                    <img src="assets/img/features/owners/owner-dashboard.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Pool of pre-qualified tenants</li>
                        <li>View and accept offers right away</li>
