fetchProfile and permissions errors handling

--- a/angular/src/app/tenant/partials/property-teaser.tpl.html
+++ b/angular/src/app/tenant/partials/property-teaser.tpl.html
@@ -1,4 +1,6 @@
+<div style="min-height: 234px;">
 <img ng-src="{{property.pictures[0]}}" class="img-responsive">
+</div>
 <p><strong>Number of offers:</strong> {{property.bids.length}}</p>
 <p><strong>Best offer:</strong> {{property.bestOffer.rentAmount | rentCurrency }}</p>
 <p><strong>Move In Date:</strong> {{property.bestOffer.moveInDate | date:'MMM dd'}}</p>
