--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -175,7 +175,7 @@
        </div>
        <div class="row">
           <div class="col-sm-12">
-             <textarea class="form-control" ng-model="property.description" rows="10" required></textarea>
+             <textarea class="form-control input-lg" ng-model="property.description" rows="10" required></textarea>
           </div>
        </div>
     </fieldset>
