--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -51,7 +51,7 @@
     <h5 class="top-buffer">Recent Offers</h5>
 
     <div class="row properties">
-        <div class="col-sm-3" ng-repeat="property in properties | loadProperty:'':'lazy'">
+        <div class="col-sm-3" ng-repeat="property in properties | loadProperty:'':'lazy'" ng-show="property.address">
             <ng-include src="'owner/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented">View Offers</a>
         </div>
