Changed on-boarding to myprofile for links

--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -4,7 +4,7 @@
             <a ng-class="isActive('/tenants')" href="#/tenants">Tenants</a>
         </li>
         <li>
-            <a ng-class="isActive('/owners')" href="#/owners">Owners & Managers</a>
+            <a ng-class="isActive('/owners')" href="#/owners">Owners &amp; Managers</a>
         </li>
         <li>
             <a ng-class="isActive('/properties')" href="#/properties">Take A Tour</a>
