--- a/angular/src/app/tenant/partials/on-boarding-navbar.tpl.html
+++ b/angular/src/app/tenant/partials/on-boarding-navbar.tpl.html
@@ -1,8 +1,8 @@
 <div class="container">
     <ul class="nav navbar-nav navbar-arrow">
         <li><a class="first-arrow"></a></li>
-        <li><a href="#/tenants/on-boarding" ng-class="isActive('/tenants/on-boarding',true)">1<br>Enter<br> Profile</a></li>
-        <li><a href="#/tenants/on-boarding/2" ng-class="isActive('/tenants/on-boarding/2')" style="padding-left: 70px;padding-right: 0px;">2<br>Complete<br>Credit Check</a></li>
-        <li><a href="#/tenants/on-boarding/3" ng-class="isActive('/tenants/on-boarding/3')">3<br>Ready to<br> Apply</a></li>
+        <li><a href="#/tenants/myprofile" ng-class="isActive('/tenants/myprofile',true)">1<br>Enter<br> Profile</a></li>
+        <li><a href="#/tenants/myprofile/2" ng-class="isActive('/tenants/myprofile/2')" style="padding-left: 70px;padding-right: 0px;">2<br>Complete<br>Credit Check</a></li>
+        <li><a href="#/tenants/myprofile/3" ng-class="isActive('/tenants/myprofile/3')">3<br>Ready to<br> Apply</a></li>
     </ul>
 </div>
