--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -18,7 +18,7 @@
             <div class="vertical-buffer">
                 <table class="table table-bordered table-condensed" style="width:100%">
                     <tr>
-                        <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{addedPropertyId}}"></td>
+                        <td><input class="form-control input-lg" type="text" value="http://rented.co/property/{{addedPropertyId}}"></td>
                     </tr>
                     <tr>
                         <td><h6>Copy and past the link above into your Craigslist Ad</h6></td>
