--- a/angular/src/app/owner/partials/verify-profile.tpl.html
+++ b/angular/src/app/owner/partials/verify-profile.tpl.html
@@ -1,5 +1,5 @@
     <div class="buttons"> 
-       <a href="#/owners/add-property/3" class="next">Next</a>
+       <a href="/owners/add-property/3" class="next">Next</a>
     </div>
 
     <h1>Owner/Manager Verification</h1>
