--- a/angular/src/app/partials/footer.tpl.html
+++ b/angular/src/app/partials/footer.tpl.html
@@ -12,8 +12,8 @@
 
                     <div class="col-lg-3 col-sm-4 col-xs-6">
                         <h4 class="footer-section-title">Legal</h4>
-                        <a href="#/privacy-policy">Privacy Policy</a>
-                        <a class="footer-terms" href="#/terms" style="white-space: nowrap;">Terms of Use</a>
+                        <a href="/privacy-policy">Privacy Policy</a>
+                        <a class="footer-terms" href="/terms" style="white-space: nowrap;">Terms of Use</a>
                     </div> <!-- legal -->
 
                     <div class="col-lg-2 col-sm-3 text-center footer-cr">
