--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -2,15 +2,15 @@
     <div class="container homepage-drawing">
         <div class="jumbotron" style="background-color: transparent; padding-left: 16px;">
            <h1>Welcome Home!</h1>
-           <h2>Easy and transparent property rentals</h2>
+           <h2>Easy and secure rental transactions</h2>
            <div class="row" style="margin-top: 30px;">
               <div class="col-lg-4 col-sm-5">
                   <h3>Tenants</h3>
-                  <a href="#/tenants/on-boarding" class="btn btn-rented" role="button">Create Your Profile</a>
+                  <a href="/tenants/myprofile" class="btn btn-rented" role="button">Create Your Profile</a>
               </div>   
               <div class="col-lg-3 col-sm-3">
                   <h3>Owners/Managers</h3>
-                  <a href="#/owners/add-property" class="btn btn-rented" role="button">Add Your Property</a>
+                  <a href="/owners/add-property" class="btn btn-rented" role="button">Add Your Property</a>
               </div>   
            </div>
         </div>
