--- a/angular/src/app/tenant/partials/menu-tenant.tpl.html
+++ b/angular/src/app/tenant/partials/menu-tenant.tpl.html
@@ -1,8 +1,8 @@
 <div class="container">
     <ul class="nav navbar-nav navbar-user">
-       <!--li><a href="#/tenants/on-boarding" class="first" ng-class="isActive('/tenants/on-boarding')">On Boarding</a></li-->
-       <li><a href="#/tenants/dashboard" ng-class="isActive('/tenants/dashboard')">My Dashboard</a></li>
-       <li><a href="#/tenants/properties" ng-class="isActive('/tenants/properties')">My Properties</a></li>
-       <li><a href="#/tenants/myprofile" ng-class="isActive('/tenants/myprofile')">My Profile</a></li>
+       <!--li><a href="/tenants/on-boarding" class="first" ng-class="isActive('/tenants/on-boarding')">On Boarding</a></li-->
+       <li><a href="/tenants/dashboard" ng-class="isActive('/tenants/dashboard')">My Dashboard</a></li>
+       <li><a href="/tenants/properties" ng-class="isActive('/tenants/properties')">My Properties</a></li>
+       <li><a href="/tenants/myprofile" ng-class="isActive('/tenants/myprofile')">My Profile</a></li>
     </ul>
 </div>
