--- a/angular/src/app/user/partials/bidhistory.tpl.html
+++ b/angular/src/app/user/partials/bidhistory.tpl.html
@@ -3,13 +3,13 @@
     <div class="col-sm-12 col-md-2">
         <div class="property-box no-border small">
             <div class="property-box-inner">
-                <h3 class="property-box-title"><a href="#/property/{{property.id}}">{{property.address}}</a></h3>
-                <h4 class="property-box-subtitle"><a href="#/property/{{property.id}}">{{property.city}}</a></h4>
+                <h3 class="property-box-title"><a href="/property/{{property.id}}">{{property.address}}</a></h3>
+                <h4 class="property-box-subtitle"><a href="/property/{{property.id}}">{{property.city}}</a></h4>
                 <!-- /.property-box-label -->
                 <div class="property-box-picture">
                     <!-- /.property-box-price -->
                     <div class="property-box-picture-inner">
-                        <a href="#/property/{{property.id}}" class="property-box-picture-target">
+                        <a href="/property/{{property.id}}" class="property-box-picture-target">
                             <img src="assets/img/{{property.id}}/{{property.images[1]}}" alt="">
                         </a><!-- /.property-box-picture-target -->
                     </div>
