--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -18,7 +18,7 @@
 
     <div class="row" style="margin-top: 55px;">
         <div class="col-sm-12" style="text-align: center;">
-            <p class="small">By Logging in to the System you Agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
+            <p class="small">By Logging in to the System you Agree to the <a href="/terms">Terms of Use</a> and <a href="/privacy-policy">Privacy Policy</a>.</p>
         </div>
     </div>
     <div class="row" style="padding-bottom: 50px;">
@@ -28,7 +28,7 @@
     </div>
     <div class="row" style="padding-bottom: 50px;">
         <div class="col-xs-6 center text-center">
-            <a type="button" href="#/register" class="btn btn-rented" >Create a new account!</a>
+            <a type="button" href="/register" class="btn btn-rented" >Create a new account!</a>
         </div>
     </div>
 </form>
