--- a/angular/src/app/admin/partials/menu-admin.tpl.html
+++ b/angular/src/app/admin/partials/menu-admin.tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
     <ul class="nav navbar-nav navbar-user">
-       <li><a href="#/admin/credit-check" ng-class="isActive('/admin/credit-check')">Credit Check</a></li>
+       <li><a href="/admin/credit-check" ng-class="isActive('/admin/credit-check')">Credit Check</a></li>
     </ul>
 </div>
