--- a/angular/src/app/nav/partials/topbar.tpl.html
+++ b/angular/src/app/nav/partials/topbar.tpl.html
@@ -9,10 +9,10 @@
         </div>
         <!-- /.header-infobox-->
         <ul class="header-bar-nav nav nav-register">
-            <li ng-show-auth="['logout','error']"><a href="#/login">login</a></li>
-            <li ng-show-auth="['logout','error']"><a href="#/register">register</a></li>
-            <li ng-show-auth="'login'"><a href="#/account">account</a></li>
-            <li ng-show-auth="'login'"><a href="#/logout">logout</a></li>
+            <li ng-show-auth="['logout','error']"><a href="/login">login</a></li>
+            <li ng-show-auth="['logout','error']"><a href="/register">register</a></li>
+            <li ng-show-auth="'login'"><a href="/account">account</a></li>
+            <li ng-show-auth="'login'"><a href="/logout">logout</a></li>
             <li><a href="#">help</a></li>
         </ul>
     </div>
