--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -20,7 +20,7 @@
 
             <div class="row vertical-buffer">
                     <div class="col-xs-12 text-center">
-                         <a href="#/owners/add-property" class="btn btn-rented">Add Your Property</a>
+                         <a href="/owners/add-property" class="btn btn-rented">Add Your Property</a>
                     </div>
             </div>
     </div>
