--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -2,7 +2,7 @@
 
     <div class="buttons" ng-show="add">
         <button type="button" class="btn btn-rented" style="margin-right: 10px" ng-click="save(property)">Save</button>
-        <a href="#/owners/add-property/2" class="next" style="padding-left: 20px;">Next</a>
+        <a href="/owners/add-property/2" class="next" style="padding-left: 20px;">Next</a>
     </div>
 
     <h1 style="margin-top: 0px;" ng-show="add">Property {{propertyNo}}</h1>
