--- a/angular/src/app/tenant/partials/credit-check.tpl.html
+++ b/angular/src/app/tenant/partials/credit-check.tpl.html
@@ -1,5 +1,5 @@
     <div class="buttons">
-        <a href="#/tenants/on-boarding/ready-to-apply" class="next">Next</a>
+        <a href="/tenants/on-boarding/ready-to-apply" class="next">Next</a>
     </div>
 
     <h1>Credit Check</h1>
