--- a/angular/src/app/tenant/properties.tpl.html
+++ b/angular/src/app/tenant/properties.tpl.html
@@ -5,7 +5,7 @@
         <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty:'':'lazy'" ng-show="property.address">
             <div ng-repeat="bid in property.bids | loadBid" style="display: none;"></div> <!-- FIXME -->
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
-            <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
+            <a href="/property/{{property.$id}}" class="btn btn-rented">See More</a>
             <button class="btn btn-rented" ng-click="cancelBid(property)" ng-hide="(!property.bestOffer)||(property.bestOffer.userId==profile.$id&&property.bestOffer.accepted)">Cancel My Offer</button>
         </div>
     </div>
@@ -21,7 +21,7 @@
         <div class="col-sm-3 top-buffer-lg" ng-repeat="property in watchlist | loadProperty:'':'lazy'" ng-show="property.address">
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <!--a href="http://www.craigslist.org/about/sites#US" class="btn btn-rented" target="_blank">See More On Craigslist</a-->
-            <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
+            <a href="/property/{{property.$id}}" class="btn btn-rented">See More</a>
             <button class="btn btn-rented" ng-click="unwatch(property)">Unwatch</button>
         </div>
     </div>
