--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -52,7 +52,7 @@
     </div>
     <div class="row" style="margin-top: 55px;">
         <div class="col-sm-12" style="text-align: center;">
-            <p class="small">By Registering in to the System you Agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
+            <p class="small">By Registering in to the System you Agree to the <a href="/terms">Terms of Use</a> and <a href="/privacy-policy">Privacy Policy</a>.</p>
         </div>
     </div>
     <div class="row" style="padding-bottom: 50px;">
