--- a/angular/src/app/user/register.tpl.html
+++ b/angular/src/app/user/register.tpl.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-11 center">
             <ng-include src="'user/partials/registerform.tpl.html'"></ng-include>
-            <p class="bottom-buffer">Already registered? <a href="#/login">Login</a></p>
+            <p class="bottom-buffer">Already registered? <a href="/login">Login</a></p>
         </div>
     </div> <!-- /.row -->
 </div> <!-- /.container -->
