--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -7,9 +7,9 @@
     <ol style="font-size: 24px;">
         <li> Invite a tenant
             <div class="input-group input-group-lg vertical-buffer">
-              <input type="email" class="form-control" placeholder="tenant@example.com, tenant2@example.com" ng-model="inviteAddress">
+              <input type="text" class="form-control" placeholder="tenant@example.com, tenant2@example.com" ng-model="inviteAddress">
               <span class="input-group-btn">
-                <button class="btn btn-rented" type="button">Invite!</button>
+                <button class="btn btn-rented" type="button" ng-click="invite(inviteAddress)">Invite!</button>
               </span>
             </div><!-- /input-group --> 
         </li>
