Changes based on design team's input
- Hide button on owner landing page when tenant logged in
- Hide button on tenant landing page when owner logged in
- Changed home page message

--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -20,7 +20,7 @@
 
             <div class="row vertical-buffer">
                     <div class="col-xs-12 text-center">
-                         <a href="#/register/owner" class="btn btn-rented">Add Your Property</a>
+                         <a href="#/register/owner" class="btn btn-rented" ng-hide="{{profile && profile.type == 'tenant'}}">Add Your Property</a>
                     </div>
             </div>
     </div>
