Changed home page message + JSON backup
- New home page message
- JSON backup from Firebase database

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -1,8 +1,8 @@
 <div class="homepage-gradient">
     <div class="container homepage-drawing">
         <div class="jumbotron" style="background-color: transparent; padding-left: 16px;">
-           <h1>Welcome Home!</h1>
-           <h2>Easy and secure rental transactions online</h2>
+           <h1>Rent Your Way</h1>
+           <h2>Easy and secure rental transactions</h2>
            <div class="row" style="margin-top: 30px;">
               <div class="col-lg-4 col-sm-5">
                   <h3>Tenants</h3>
