--- a/angular/src/app/tenant/partials/profile.tpl.html
+++ b/angular/src/app/tenant/partials/profile.tpl.html
@@ -14,6 +14,10 @@
 
         <div ng-include="'tenant/partials/profile-page-2.tpl.html'" ng-show="page==2">
         </div>
+        
+        <div class="buttons">
+           <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile,password)">Save</button>
+        </div>
 
     </form>
 
