Changed words on credit report download
- Changed to say “Download Your Credit Report”

--- a/angular/src/app/tenant/partials/credit-check.tpl.html
+++ b/angular/src/app/tenant/partials/credit-check.tpl.html
@@ -6,7 +6,7 @@
 
     <div class="col-sm-12">
         <fieldset class="readonly">
-          <a href="{{profile.creditReport}}" download="{{profile.firstName}}-{{profile.lastName}}-credit-report.pdf" class="field-text" ng-show="profile.creditReport">Download <i class="glyphicon glyphicon-cloud-download"></i></a>
+          <a href="{{profile.creditReport}}" download="{{profile.firstName}}-{{profile.lastName}}-credit-report.pdf" class="field-text" ng-show="profile.creditReport">Download Your Credit Report  <i class="glyphicon glyphicon-cloud-download"></i></a>
           <span class="text-lg bottom-buffer-xl" ng-hide="profile.creditReport" style="margin-bottom: 70px;">Thank you for completing your profile, Rented Team will contact you shortly. 
     <br><br>Your offer will still be submitted.</span>
         </fieldset>
