Owner property changes
- Pictures optional
- Description optional
- Parking optional
- New name for “dynamic pricing”

--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -138,7 +138,7 @@
                <div class="form-group">
                    <label class="col-sm-7 control-label">Parking</label>
                    <div class="col-sm-5">
-                      <select class="form-control input-lg" ng-model="property.parking" required>
+                      <select class="form-control input-lg" ng-model="property.parking" >
                           <option value="">Select...</option>
                           <option value="0">0</option>
                           <option value="1">1</option>
@@ -175,7 +175,7 @@
        </div>
        <div class="row">
           <div class="col-sm-12">
-             <textarea class="form-control input-lg" ng-model="property.description" rows="10" required></textarea>
+             <textarea class="form-control input-lg" ng-model="property.description" rows="10" ></textarea>
           </div>
        </div>
     </fieldset>
@@ -202,7 +202,7 @@
                    <div class="col-sm-12">
                      <div class="checkbox">
                         <label class="control-label">
-                          <input type="checkbox" ng-model="property.dynamicPricing"> Enable Dynamic Pricing
+                          <input type="checkbox" ng-model="property.dynamicPricing"> Tenants Name Their Rent
                         </label>
                      </div>
                    </div>
