--- a/angular/src/app/owner/partials/menu-owner.tpl.html
+++ b/angular/src/app/owner/partials/menu-owner.tpl.html
@@ -5,5 +5,6 @@
        <li><a href="#/owners/properties" ng-class="isActive('/owners/properties')">My Properties</a></li>
        <li><a href="#/owners/tenants" ng-class="isActive('/owners/tenants')">My Tenants</a></li>
        <li><a href="#/owners/profile" ng-class="isActive('/owners/profile')">My Profile</a></li>
+        <li><a href="#/owners/invite" ng-class="isActive('/owners/invite')">Invite Tenants</a></li>
     </ul>
 </div>
