--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -30,7 +30,70 @@
             </div>
         </div>
     </div>
+    
+    <fieldset class="top-buffer">
+        <legend>Your Property Link</legend>
+        
+        <div class="row col-sm-12">
+            <table class="table table-bordered table-condensed" style="width:100%">
+                <tr>
+                    <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{property.$id}}" disabled></td>
+                </tr>
+            </table>
+        </div>
 
+        <!--div class="row">
+
+           <div class="col-sm-6">
+               <div class="form-group">
+                   <label class="col-sm-4 control-label">Street</label>
+                   <div class="col-sm-8">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.street" autofocus required>
+                   </div>
+               </div>
+           </div>
+           <div class="col-sm-6">
+               <div class="form-group">
+                   <label class="col-sm-4 control-label">Apt. number</label>
+                   <div class="col-sm-8">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.aptNumber">
+                   </div>
+               </div>
+           </div>
+
+        </div>
+
+        <div class="row">
+           <div class="col-sm-6">
+               <div class="form-group">
+                   <label class="col-sm-4 control-label">City</label>
+                   <div class="col-sm-8">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.city" required>
+                   </div>
+               </div>
+           </div>
+           <div class="col-sm-6">
+               <div class="form-group">
+                   <label class="col-sm-4 control-label">State</label>
+                   <div class="col-sm-8">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}" required>
+                   </div>
+               </div>
+           </div>
+        </div>
+
+        <div class="row">
+           <div class="col-sm-6">
+               <div class="form-group">
+                   <label class="col-sm-4 control-label">Zip</label>
+                   <div class="col-sm-8">
+                      <input class="form-control input-lg" type="text" ng-model="property.address.zip" ng-pattern="/[0-9]{5}/" maxlength="5" required>
+                   </div>
+               </div>
+           </div>
+        </div-->
+
+    </fieldset>
 
     <fieldset class="fieldset-required">
         <legend>Address</legend>
